--- a/src/assets/sass/custom.sass
+++ b/src/assets/sass/custom.sass
@@ -109,3 +109,22 @@ section
     &:hover
       text-decoration: underline
       text-decoration-color: variables.$color-primary
+
+@keyframes spin
+  0%
+    transform: rotate(0deg)
+
+  100%
+    transform: rotate(360deg)
+
+@mixin spinner($duration: 1s, $timing: linear, $infinite: infinite)
+  animation: spin $duration $timing $infinite
+
+.icon-spinner
+  margin-left: 10px
+  width: 16px
+  height: 16px
+  border: 2px solid white
+  border-top-color: transparent
+  border-radius: 50%
+  @include spinner(0.6s)
