--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -77,7 +77,7 @@
     }
 
     .label-1 {
-        @apply hidden;
+        @apply font-montserrat font-normal text-[14px] leading-['18px'];
     }
 
     .helper-text-1 {
@@ -89,7 +89,7 @@
     }
 
     .body-compact-01 {
-        @apply hidden;
+        @apply font-montserrat font-semibold text-[18px] leading-['22px'];
     }
 
     .body-01 {
