--- a/resources/css/arq_lab.css
+++ b/resources/css/arq_lab.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
 
 @import 'tailwindcss';
 
@@ -37,6 +38,8 @@
         'Segoe UI Symbol', 'Noto Color Emoji';
 
     --font-outfit: 'Outfit';
+
+    --font-italiana: 'Italiana';
 }
 
 @layer {
@@ -135,7 +138,7 @@
     }
 
     .heading-05 {
-        @apply hidden;
+        @apply font-sans font-light text-[30px] leading-[38px];
     }
 
     .heading-06 {
@@ -168,6 +171,22 @@
 
     .fluid-display-04 {
         @apply font-sans font-light text-[164px] leading-[140%];
+    }
+
+    .display-01 {
+        @apply hidden;
+    }
+
+    .display-02 {
+        @apply hidden;
+    }
+
+    .display-03 {
+        @apply hidden;
+    }
+
+    .display-04 {
+        @apply font-italiana font-normal text-6xl;
     }
 
     /** Typography End */
