--- a/resources/css/arq_lab.css
+++ b/resources/css/arq_lab.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 @import 'tailwindcss';
 
@@ -19,7 +20,7 @@
     --color-primary-light: #FF3B44;
     --color-primary-dark: #DB1D26;
 
-    --color-secondary: #101828;
+    --color-secondary: #996830;
     --color-secondary-light: #1B2842;
     --color-secondary-dark: #06090F;
 
@@ -40,6 +41,8 @@
     --font-outfit: 'Outfit';
 
     --font-italiana: 'Italiana';
+
+    --font-playfair-display: 'Playfair Display';
 }
 
 @layer {
@@ -182,7 +185,7 @@
     }
 
     .display-03 {
-        @apply hidden;
+        @apply font-playfair-display font-normal text-[40px];
     }
 
     .display-04 {
